# nuro

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  context.h  editor.vcxproj  glad.c  imgui.ini  rendering_alpha.sln  rendering_alpha.vcxproj  rendering_alpha.vcxproj.filters  solution.sln  vcpkg.json
core/: engine.h  main.cpp
engine-editor/src/core/: CMakeLists.txt  engine.h
engine-editor/src/core/backend/: api.h
engine-editor/src/core/context/: application_context.cpp
engine-editor/src/core/diagnostics/: diagnostics.cpp  profiler.h
engine-editor/src/core/ecs/: components.h  ecs.h  reflection.cpp
engine-editor/src/core/input/: cursor.cpp
engine-editor/src/core/resource/: resource_loader.cpp  resource_loader.h
engine-editor/src/core/transform/: transform.cpp
engine-editor/src/core/utils/: console.cpp  iohandler.cpp
engine-editor/src/core/viewport/: viewport.h
nuro-core/: CMakeLists.txt  engine.h
nuro-core/audio/: audio_buffer.cpp  audio_buffer.h  audio_clip.cpp  audio_clip.h  audio_context.cpp  audio_context.h  audio_data.cpp  audio_data.h  audio_device.cpp  audio_device.h  audio_info.h  audio_listener.cpp  audio_listener.h  audio_samples.h  audio_source.cpp  audio_source.h
nuro-core/context/: application_context.cpp  application_context.h
nuro-core/diagnostics/: diagnostics.cpp  diagnostics.h
nuro-core/ecs/: components.h  ecs.cpp  ecs.h  ecs_collection.h  ecs_reflection.cpp  ecs_reflection.h  entity_container.h  entity_container.hpp  reflection.cpp
nuro-core/input/: cursor.cpp  cursor.h  input.cpp
nuro-core/memory/: resource.h  resource_manager.cpp  resource_manager.h  resource_pipe.h
nuro-core/physics/: physics.h
nuro-core/physics/core/: physics_bridge.cpp  physics_bridge.h  physics_context.cpp  physics_context.h
nuro-core/physics/rigidbody/: rigidbody.cpp  rigidbody.h
nuro-core/physics/utils/: px_translator.h
nuro-core/rendering/culling/: bounding_volume.cpp
nuro-core/rendering/gizmos/: gizmo_color.h  gizmos.h  imgizmo.cpp  imgizmo.h
nuro-core/rendering/icons/: icon_pool.cpp  icon_pool.h
nuro-core/rendering/material/: imaterial.h
nuro-core/rendering/model/: mesh.cpp  mesh.h  model.cpp  model.h
nuro-core/rendering/passes/: forward_pass.cpp  forward_pass.h  pre_pass.cpp  pre_pass.h  preprocessor_pass.cpp  preprocessor_pass.h  ssao_pass.cpp  ssao_pass.h
nuro-core/rendering/postprocessing/: bloom_pass.h  motion_blur_pass.cpp  motion_blur_pass.h  post_processing.h  post_processing_pipeline.cpp  post_processing_pipeline.h
nuro-core/rendering/primitives/: global_quad.cpp  global_quad.h  shapes.cpp  shapes.h
nuro-core/rendering/sceneview/: scene_view_forward_pass.cpp
nuro-core/rendering/shader/: shader.cpp  shader.h  shader_pool.cpp  shader_pool.h
nuro-core/rendering/shadows/: shadow_disk.cpp  shadow_map.cpp  shadow_map.h
nuro-core/rendering/skybox/: cubemap.cpp  cubemap.h  skybox.cpp  skybox.h
nuro-core/rendering/texture/: texture.cpp  texture.h
nuro-core/rendering/transformation/: transformation.cpp  transformation.h
nuro-core/rendering/velocitybuffer/: velocity_buffer.cpp  velocity_buffer.h
nuro-core/resource/: resource.h  resource_loader.cpp  resource_loader.h  resource_manager.cpp  resource_manager.h
nuro-core/scene/: scene.h  scene_manager.cpp  scene_manager.h
nuro-core/time/: time.cpp  time.h
nuro-core/transform/: transform.cpp  transform.h  transform_pass.cpp  transform_pass.h
nuro-core/utils/: callback.h  concurrent_queue.h  console.cpp  console.h  event.h  format.cpp  format.h  fsutil.cpp  fsutil.h  guid.cpp  guid.h  ioutils.cpp  ioutils.h  string_helper.cpp  string_helper.h
nuro-core/viewport/: viewport.cpp
nuro-editor/: CMakeLists.txt  main.cpp
nuro-editor/assetsys/: asset_extensions.cpp  asset_extensions.h  asset_meta.cpp  asset_meta.h  editor_asset.h  fallback_asset.cpp  fallback_asset.h  font_asset.cpp  font_asset.h  texture_asset.cpp  texture_asset.h
nuro-editor/gizmos/: component_gizmos.cpp  component_gizmos.h  editor_gizmo_color.h
nuro-editor/imgui/: README.md  imgui.cpp  imgui_internal.h  implot.cpp  imstb_textedit.h
nuro-editor/layouts/: imgui.ini
nuro-editor/pipelines/: game_view_pipeline.cpp  game_view_pipeline.h  preview_pipeline.cpp  preview_pipeline.h  scene_view_forward_pass.cpp  scene_view_pipeline.cpp  scene_view_pipeline.h
nuro-editor/project/: project.cpp  project.h  project_assets.cpp  project_assets.h  project_manager.cpp  project_manager.h  project_observer.cpp  project_observer.h
nuro-editor/reflection/: asset_registry.cpp  asset_registry.h  component_registry.cpp  component_registry.h
nuro-editor/runtime/: fal.sh  runtime.cpp  runtime.h
nuro-editor/testing/: game_logic.cpp
nuro-editor/ui/: editor_ui.cpp  editor_ui.h
nuro-editor/ui/collection/: IconsFontAwesome6.h
nuro-editor/ui/components/: im_components.cpp  im_components.h  inspectable_components.cpp  inspectable_components.h  toggle_bar.cpp  toggle_bar.h
nuro-editor/ui/context_menu/: context_menu.cpp
nuro-editor/ui/dynamic_drawing/: draw_alignments.h  dynamic_content.cpp  dynamic_content.h  dynamic_drawing.h  dynamic_text.h
nuro-editor/ui/footer/: footer.cpp
nuro-editor/ui/inspectables/: asset_inspectable.cpp  asset_inspectable.h  entity_inspectable.cpp  entity_inspectable.h  texture_inspectable.cpp  texture_inspectable.h  welcome_inspectable.cpp  welcome_inspectable.h
nuro-editor/ui/search/: search_popup.cpp  search_popup.h
nuro-editor/ui/title_bar/: title_bar.cpp  title_bar.h
nuro-editor/ui/utils/: ui_utils.cpp
nuro-editor/ui/windows/: asset_browser_window.cpp  asset_browser_window.h  audio_setup_window.cpp  audio_setup_window.h  console_window.cpp  console_window.h  diagnostics_window.cpp  editor_window.h  game_window.cpp  insight_panel_window.cpp  insight_panel_window.h  post_processing_window.cpp  post_processing_window.h  registry_window.cpp  registry_window.h  resource_viewer_window.cpp  resource_viewer_window.h  viewport_window.cpp  viewport_window.h
nuro-editor/ui/workspace_bar/: workspace_bar.h
nuro-editor/utfcpp/: README.md
(+814 files in other folders)
